[package]
name = "my_websocket_crate"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
tungstenite = "0.17"
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.10.0"

rustler = "0.35.0"

 
